--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1949,6 +1949,9 @@
     <ClCompile Include="UVa\10300\10354.cpp">
       <Filter>UVaOJ\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10800\10803.cpp">
+      <Filter>UVaOJ\10800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
