--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1952,6 +1952,9 @@
     <ClCompile Include="UVa\10800\10803.cpp">
       <Filter>UVaOJ\10800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11100\11015.cpp">
+      <Filter>UVaOJ\11000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
