--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1955,6 +1955,9 @@
     <ClCompile Include="UVa\11100\11015.cpp">
       <Filter>UVaOJ\11000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11400\11463.cpp">
+      <Filter>UVaOJ\11400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
