--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1958,6 +1958,9 @@
     <ClCompile Include="UVa\11400\11463.cpp">
       <Filter>UVaOJ\11400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\200\280.cpp">
+      <Filter>UVaOJ\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
