--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1961,6 +1961,9 @@
     <ClCompile Include="UVa\200\280.cpp">
       <Filter>UVaOJ\200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\300\341.cpp">
+      <Filter>UVaOJ\300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
