--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1964,6 +1964,9 @@
     <ClCompile Include="UVa\300\341.cpp">
       <Filter>UVaOJ\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\429.cpp">
+      <Filter>UVaOJ\400\420</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
