shortest path, floyd warshall, variant

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1988,6 +1988,9 @@
     <ClCompile Include="UVa\300\336.cpp">
       <Filter>UVaOJ\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\104.cpp">
+      <Filter>UVaOJ\100\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
