--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -2393,6 +2393,7 @@
     <ClInclude Include="Library\point.h" />
     <ClInclude Include="Library\primes.h" />
     <ClInclude Include="Library\shortest_path.h" />
+    <ClInclude Include="Library\union_find.h" />
     <ClInclude Include="Library\util.h" />
   </ItemGroup>
   <ItemGroup>
