--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2006,6 +2006,9 @@
     <ClCompile Include="UVa\11600\11690.cpp">
       <Filter>UVaOJ\11600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11500\11503.cpp">
+      <Filter>UVaOJ\11500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
