--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2012,6 +2012,9 @@
     <ClCompile Include="UVa\10600\10685.cpp">
       <Filter>UVaOJ\10600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10608.cpp">
+      <Filter>UVaOJ\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
