connected components, union find

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2015,6 +2015,9 @@
     <ClCompile Include="UVa\10600\10608.cpp">
       <Filter>UVaOJ\10600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10500\10583.cpp">
+      <Filter>UVaOJ\10500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
