--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -2138,6 +2138,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="UVa\10500\10583.cpp" />
     <ClCompile Include="UVa\10600\10608.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -2451,7 +2452,10 @@
     <None Include="UVa\10400\10497.py" />
     <None Include="UVa\10500\10523.py" />
     <None Include="UVa\10500\10551.py" />
-    <None Include="UVa\10500\10579.py" />
+    <None Include="UVa\10500\10579.py">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </None>
     <None Include="UVa\10800\10814.py" />
     <None Include="UVa\10900\10925.py" />
     <None Include="UVa\11100\11115.py" />
