--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2018,6 +2018,9 @@
     <ClCompile Include="UVa\10500\10583.cpp">
       <Filter>UVaOJ\10500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10959.cpp">
+      <Filter>UVaOJ\10900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
