--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2021,6 +2021,9 @@
     <ClCompile Include="UVa\10900\10959.cpp">
       <Filter>UVaOJ\10900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10986.cpp">
+      <Filter>UVaOJ\10900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
