--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2039,6 +2039,9 @@
     <ClCompile Include="UVa\10000\10034.cpp">
       <Filter>UVaOJ\10000\10030</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11600\11631.cpp">
+      <Filter>UVaOJ\11600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
