--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2045,6 +2045,9 @@
     <ClCompile Include="UVa\100\120.cpp">
       <Filter>UVaOJ\100\120</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\184.cpp">
+      <Filter>UVaOJ\100\180</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
