--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2048,6 +2048,9 @@
     <ClCompile Include="UVa\100\184.cpp">
       <Filter>UVaOJ\100\180</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\200\208.cpp">
+      <Filter>UVaOJ\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
